<resources>
    <string name="app_name">Káva s sebou</string>
    <string name="title_coffeesite_detail">CoffeeSite Detail</string>
    <string name="main_button_search_espresso">"ESPRESSO"</string>
    <string name="main_button_search_kafe">"KÁVA"</string>
    <string name="main_button_search_nextline_start">"("</string>
    <string name="main_button_search_nextline_end">" m)"</string>
    <string name="num_all_sites_label">Počet všech lokací: </string>
    <string name="num_all_sites7_label">Nové lokace za posledních 7 dnů: </string>
    <string name="num_all_users_label">Počet všech uživatelů: </string>
    <string name="coffee_sites_today">Nové lokace dnes: </string>
    <string name="no_espresso_found">Bohužel, žádné espresso poblíž.</string>
    <string name="no_site_found">Bohužel, žádná káva poblíž.</string>
    <string name="action_settings">Nastavení</string>
    <string name="action_about">O aplikaci</string>
    <string name="about_toolbar_title">O aplikaci</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_map">Mapa</string>
    <string name="currentPosition">Vaše poloha</string>
    <string name="about_author">Vytvořil: Michal Václavek</string>
    <string name="about_version">v. 2.5.2</string>
    <string name="about_datum">06.06. 2026</string>
    <string name="about_sentence1">Tato aplikace umožňuje vyhledat <b>"kávové lokace"</b>, které zadali zaregistrovaní uživatelé a to podle aktuální polohy zařízení.</string>
    <string name="about_sentence2">Kávové lokace jsou místa, která jsou veřejně přístupná a kde lze zakoupit kávu s sebou. Jde tedy např. o standardní <b>automaty na kávu, pekárny, bistra, občerstvení, trafiky, benzinky</b>, atp.</string>
    <string name="about_sentence3">Dále aplikace umožňuje, přihlášeným uživatelům, <b>evidovat novou kávovou lokaci,</b> <b>ohodnotit kvalitu kávy</b> v dané lokaci a <b>přidat komentář</b>. Lokaci lze vytvořit i bez aktuálního připojení k internetu a nahrát na server později.</string>
    <string name="about_sentence5">Lze si také objednat odběr novinek, tj. upozornění, že byla zaevidována nová kávová lokace.</string>
    <string name="about_sentence4">Pokud se vám aplikace líbí, zaregistrujte se prosím v této aplikaci nebo na stránce <b><a href="https://www.coffeecompass.cz">coffeecompass.cz</a></b>, a pomozte evidovat další kávové lokace.</string>
    <string name="about_sentence_widget"></string>
    <string name="about_permissions_needed">Aplikace ke své činnosti potřebuje přístup k poloze vašeho zařízení (aby našla nejbližší lokace), přístup k foťáku (aby bylo možné udělat foto lokace) a přístup k internetu, aby bylo možné komunikovat se serverem  <b>coffeecompass.cz</b>, kde jsou uložena data o lokacích.</string>
    <string name="about_coffeecompass_link">"<a href="https://www.coffeecompass.cz">coffeecompass.cz</a>"</string>
    <string name="local_service_started">Location Service started</string>
    <string name="local_service_stopped">Location service stoped.</string>
    <string name="local_service_label">Location service</string>
    <string name="local_service_connected">Connected to location service.</string>
    <string name="local_service_disconnected">Disconnected from location service.</string>
    <string name="no_site_in_range">Žádná káva poblíž &#128533;</string>
    <string name="no_site_in_town">Káva ve městě %1$s neevidována.</string>
    <string name="current_range_label">"Aktuální okruh vyhledávání: "</string>
    <string name="still_searching">vyhledávám ... </string>
    <string name="car_found_sites_title">Káva poblíž</string>
    <string name="car_loading">Načítám…</string>
    <string name="car_no_sites">Žádná káva v okruhu 5 km</string>
    <string name="car_action_navigate">Navigovat</string>
    <string name="car_action_comments">Komentáře</string>
    <string name="car_error_generic">Chyba načítání</string>
    <string name="car_label_rating">Hodnocení</string>
    <string name="car_label_opening_hours">Otevírací doba</string>
    <string name="title_activity_user_login">Káva s sebou</string>
    <string name="title_activity_login">Přihlášení</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">heslo</string>
    <string name="action_sign_in">Přihlásit nebo registrovat</string>
    <string name="action_sign_in_short">Přihlásit</string>
    <string name="no_account">Nemáte účet?</string>
    <string name="action_no_account_signup">Vytvořit</string>
    <string name="welcome">"Vítej "</string>
    <string name="invalid_username">Neplatné uživatelské jméno nebo heslo</string>
    <string name="invalid_password">Heslo musí mít alespoň 4 znaky</string>
    <string name="invalid_email">Neplatná email adresa</string>
    <string name="login_failed">Chyba přihlášení</string>
    <string name="username_or_email">jméno nebo email adresa</string>
    <string name="action_favorite">Login</string>
    <string name="logout_success">Odhlášení úspěšné.</string>
    <string name="delete_user_success">Uživatelský účet úspěšně smazán.</string>
    <string name="logout_failure">Odhlášení selhalo.</string>
    <string name="delete_user_failure">Smazání uživatelského účtu selhalo.</string>
    <string name="title_activity_user_signup">Káva s sebou</string>
    <string name="title_activity_signup">Registrace</string>
    <string name="prompt_signup_username">Uživatelské jméno</string>
    <string name="prompt_signup_email">Email (nepovinné)</string>
    <string name="prompt_signup_password">heslo</string>
    <string name="action_signup">Přihlásit nebo registrovat</string>
    <string name="action_signup_short">Registrovat</string>
    <string name="signup_already_registered">Už máte účet?</string>
    <string name="action_already_signup_login">Přihlásit</string>
    <string name="signup_invalid_username">Neplatné uživatelské jméno nebo heslo</string>
    <string name="signup_invalid_password">Heslo musí mít alespoň 4 znaky</string>
    <string name="action_signup_favorite">Registrovat</string>
    <string name="user_profile_label">Profil uživatele</string>
    <string name="user_profile_logout">Odhlásit</string>
    <string name="user_profile_username_label">Uživatelské jméno:</string>
    <string name="user_profile_email_label">Email:</string>
    <string name="user_register_numOfCreatedSites_label">Počet vytvořených lokací:</string>
    <string name="user_profile_firstname_label">Jméno:</string>
    <string name="user_profile_lastname_label">Příjmení:</string>
    <string name="user_profile_createdon_label">Vytvořen:</string>
    <string name="user_profile_delete_button">Smazat</string>
    <string name="user_register_failure">Registrace neúspěšná.</string>
    <string name="toast_no_internet">Připojení k internetu není k dispozici</string>
    <string name="toast_new_login_needed">Je nutné nové přihlášení.</string>
    <string name="toast_no_internet_map_not_available">Mapa je k dispozici pouze online</string>
    <string name="toast_no_internet_no_offline_data">Internet ani offline data nejsou k dispozici.</string>
    <string name="rest_public_user_url">https://coffeecompass.cz/rest/public/user/</string>
    <string name="rest_secured_user_url">https://coffeecompass.cz/rest/secured/user/</string>
    <string name="cancel">Zrušit</string>
    <string name="yes">Ano</string>
    <string name="delete_user_acount_quiestion">Smazat uživatelský účet?</string>
    <string name="rating1">1</string>
    <string name="rating2">2</string>
    <string name="rating3">3</string>
    <string name="rating4">4</string>
    <string name="rating5">5</string>
    <string name="save">Ulož</string>
    <string name="new_comment">Nové hodnocení a komentář</string>
    <string name="comment_dialog_title">Hodnocení a komentář</string>
    <string name="delete_comment">SMAZAT</string>
    <string name="delete_comment_question">Smazat komentář?</string>
    <string name="user_delete_confirm">SMAZAT</string>
    <string name="comments_only_for_registered_user">Komentovat a hodnotit může jen přihlášený uživatel.</string>
    <string name="new_site_only_for_registered_user">Novou lokaci může vytvořit pouze přihlášený uživatel.</string>
    <string name="new_coffee_site">Nová coffee lokace</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="site_type">typ zdroje</string>
    <string name="location_type">typ lokality</string>
    <string name="price_range">cenový rozsah</string>
    <string name="espresso_coffee_type_chip">espresso</string>
    <string name="instant_coffee_type_chip">instantní</string>
    <string name="turek_coffee_type_chip">turek</string>
    <string name="filtered_coffee_type_chip">překapávaná</string>
    <string name="zrnkova_coffee_type_chip">zrnková</string>
    <string name="tee_next_offer_chip">čaj</string>
    <string name="cokolada_next_offer_chip">čokoláda</string>
    <string name="pivo_next_offer_chip">pivo</string>
    <string name="limonada_next_offer_chip">limo</string>
    <string name="polivka_next_offer_chip">polévka</string>
    <string name="napoje_other_machines_chip">nápoje</string>
    <string name="sladkosti_other_machines_chip">sladkosti</string>
    <string name="bagety_other_machines_chip">bagety</string>
    <string name="other_other_machines_chip">ostatní</string>
    <string name="invalid_coffeesitename">Jméno lokace - alespoň 4 znaky a max. 35 znaků</string>
    <string name="invalid_longitude">Nesprávná hodnota zem. délky</string>
    <string name="invalid_latitude">Nesprávná hodnota zem. šířky</string>
    <string name="coffee_site_create_failure">Nepodařilo se vytvořit lokaci. Na tomto místě je pravděpodobně již jiná lokace.</string>
    <string name="coffee_site_update_failure">Modifikace lokace se nezdařila. Pozice pravděpodobně již obsazena.</string>
    <string name="coffeesite_created_successfuly">Lokace úspěšně vytvořena.</string>
    <string name="coffeesite_updated_successfuly">Lokace úspěšně modifikována.</string>
    <string name="coffeesiteservice_error_message_not_available">Chyba komunikace se serverem.</string>
    <string name="coffee_site_cancel_failure">Zrušení lokace neúspěšné. Zkuste prosím později nebo ze stránek coffeecompass.cz</string>
    <string name="coffeesite_canceled_successfuly">Lokace úspěšně zrušena.</string>
    <string name="my_coffeesites_load_failure">Seznam lokací se nepodařilo stáhnout.</string>
    <string name="coffeesite_activated_successfuly">Lokace úspěšně aktivována.</string>
    <string name="coffeesite_deactivated_successfuly">Lokace úspěšně deaktivována.</string>
    <string name="coffeesite_created_and_activated_successfuly">Lokace vytvořena a aktivována.</string>
    <string name="coffeesite_edit_content_description">Upravit lokaci</string>
    <string name="coffeesite_delete_content_description">Smazat lokaci</string>
    <string name="cancel_coffeesite_dialog_question">Smazat tuto lokaci?</string>
    <string name="cancel_coffeesite_confirm">SMAZAT</string>
    <string name="cancel_coffeesite_cancelation">Ponechat</string>
    <string name="save_or_saveactivate_coffeesite_dialog_question">Chcete novou lokaci pouze uložit nebo i aktivovat?</string>
    <string name="save_and_activate_coffeesite_confirm">ULOŽIT A AKTIVOVAT</string>
    <string name="cancel_coffeesite_save">Zrušit</string>
    <string name="save_only_coffeesite_confirm">Pouze uložit</string>
    <string name="coffeesite_save_menu_item">Uložit</string>
    <string name="save_and_activate_dialog_title">Uložit a aktivovat</string>
    <string name="site_status_select_label">Nový provozní status:</string>
    <string name="site_status_valid_from_label">Platí od: </string>
    <string name="select_valid_from_date">Vybrat datum platnosti</string>
    <string name="action_offline">Offline …</string>
    <string name="moje_lokace">Moje lokace</string>
    <string name="novinky">Novinky</string>
</resources>