<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/new_sites_notification"
        android:icon="@drawable/ic_new_coffee_bell_notification"
        android:title="@string/novinky"
        app:actionLayout="@layout/action_notifications_item_layout"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_my_coffeesites"
        android:icon="@drawable/ic_coffee_cup_main"
        android:title="@string/moje_lokace"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/action_search_main"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_login"
        android:icon="@drawable/ic_account_circle_24px"
        android:title="@string/action_favorite"
        app:showAsAction="always">
        <!--app:showAsAction="ifRoom"/> -->
    </item>

    <!-- Settings, should always be in the overflow -->

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_offline_mode"
        android:checkable="false"
        android:title="@string/action_offline"
        app:showAsAction="never" />

</menu>